Closed Bug 339002 Opened 19 years ago Closed 19 years ago

Last %-escaped character in URL disappears in status bar if page displayed as UTF-8

Categories

(Core :: Internationalization, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jbergstr, Assigned: smontagu)

References

()

Details

Attachments

(2 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; fi; rv:1.8.0.3) Gecko/20060426 Firefox/1.5.0.3 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; fi; rv:1.8.0.3) Gecko/20060426 Firefox/1.5.0.3 If, on a web page, there is a link with a URL which ends in a %-encoded character (but does not have any other escaped characters in the URL), and the page is displayed in UTF-8, the escaped character does not display in the status bar. This doesn't affect functionality. If such a link is clicked, Firefox will open the correctly escaped URL. Everything works normally if either of the following is true: * There are other escaped characters in the URL * The page is displayed in any other encoding than UTF-8 The following may be true, but none are necessary for reproducability: * The page is actually encoded in UTF-8 * The server specifies UTF-8 in its headers * UTF-8 is indicated in the HEAD block of the HTML file For examples, see the testcase HTML file. Reproducible: Always Steps to Reproduce: 1. Create an HTML file that contains a link to an address which ends in an escaped character. 2. Open the file in Firefox. 3. Make sure that Firefox displays the file in UTF-8 by selecting it in the Character Encoding menu. 4. Hover over the link and look at the status bar. Actual Results: The last characted disappears. For example, http://www.example.com/asdfg%E4 displays as http://www.example.com/asdfg Expected Results: The last character should display. The bug is also reproducible in safe mode.
Attached file A testcase HTML file
Assignee: nobody → smontagu
Component: General → Internationalization
OS: Windows XP → All
Product: Firefox → Core
QA Contact: general → amyy
Hardware: PC → All
Version: unspecified → Trunk
Attached patch PatchSplinter Review
Testing this exposed another bug: some decoders, e.g. Shift-JIS, just return NS_OK if the input ends with an isolated lead byte. I'll file that separately if I can't find an existing report.
Attachment #223156 - Flags: superreview?(roc)
Attachment #223156 - Flags: review?(jshin1987)
Comment on attachment 223156 [details] [diff] [review] Patch r=jshin
Attachment #223156 - Flags: review?(jshin1987) → review+
Attachment #223156 - Flags: superreview?(roc) → superreview+
Checked in.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: