Bug 339002 Last %-escaped character in URL disappears in status bar if page displayed as UTF-8. r=jshin, sr=roc